trybuild-qcell/src/compiletest/lcell-07.stderr
error[E0505]: cannot move out of `c1` because it is borrowed
  --> src/compiletest/lcell-07.rs:10:14
   |
8  |         let c1 = Rc::new(LCell::new(100u32));
   |             -- binding `c1` declared here
9  |         let c1ref = owner.ro(&c1);
   |                              --- borrow of `c1` occurs here
10 |         drop(c1);    // Compile error
   |              ^^ move out of `c1` occurs here
11 |         println!("{}", *c1ref);
   |                        ------ borrow later used here
